testsuite/tests/rep-poly/RepPolyMcGuard.stderr

RepPolyMcGuard.hs:30:16: error:
    • • The first argument of the rebindable syntax operator ‘(>>)’
          arising from a statement in a monad comprehension
        does not have a fixed runtime representation.
        Its type is:
          ma0 :: TYPE rep
      • The first argument of the rebindable syntax operator ‘guard’
          arising from a statement in a monad comprehension
        does not have a fixed runtime representation.
        Its type is:
          a0 :: TYPE rep
    • In a stmt of a monad comprehension: undefined
      In the expression: [() | undefined]
      In an equation for ‘foo’: foo _ = [() | undefined]
